release notes benerator 0.6.6
=============================


summary
-------


changes
-------
- changed StorageSystem interface to use HeavyweightTypedIterable


enhancements
------------
- CSVEntityExporter, FlatFileEntityExporter and ScriptedEntityExporter support dateCapitalization and timestampCapitalization
- endWithNewLine property lets CSVEntityExporter-generated files optionally end with a 'new line'
- new in-memory storage system: <store>
- Added family names for Ireland and New Zealand
- PersonGenerator and AddressGenerator can now be applied to regions like 'europe', not only countries. 
  For a single country, specify its two-letter-iso-code
- Added demos
- New method TimeUtil.endOfMonth()
- RandomUtil.randomFromWeightLiteral(this.weights)
- generic version configuration and dependency verification
- Benerator now provides its build number
- Improved database meta data invalidation algorithm, allowed override with <execute invalidate='false' />
- new property in Benerator MBean: ConnectionCount
- improved read-only database checking
- new class DecimalQuantizer
- Supporting transcoding to non-empty tables as long as transcoded data is not yet present in the target system
- transcode feature supports cascade with mutation
- Supporting 'separator' attribute in <execute> and <evaluate>


bug fixes (Find the bug tracker at http://sourceforge.net/tracker2/?group_id=222964&atid=1057386)
-------------------------------------------------------------------------------------------------
- Generation of Turkish names fails
- Using deprecated property Address.zipCode in AddressFormat
- FemaleFamilyNameConverter can be applied to Composite datasets
- Some BeneratorScript syntax errors are ignored and lead to wrong results
- #3240662: <evaluate> does not unescape BeneratorScript expressions correctly
- resource leak in database access