@@ -35,9 +35,10 @@ enhancements
 
 bug fixes (Find the bug tracker at http://sourceforge.net/tracker2/?group_id=222964&atid=1057386)
 -------------------------------------------------------------------------------------------------
+- #3291330: <setup defaultSeparator=";"> ignored by CSVEntityExporter
+- #3240662: <evaluate> does not unescape BeneratorScript expressions correctly
 - Generation of Turkish names fails
 - Using deprecated property Address.zipCode in AddressFormat
 - FemaleFamilyNameConverter can be applied to Composite datasets
 - Some BeneratorScript syntax errors are ignored and lead to wrong results
-- #3240662: <evaluate> does not unescape BeneratorScript expressions correctly
 - resource leak in database access
